--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+# Para desarrollo local con backend local
 VITE_API_URL=http://127.0.0.1:8000/api/
+
+# Para desarrollo local con backend en Railway (descomenta si usas Railway)
+# VITE_API_URL=https://bakent365-production.up.railway.app/api/
